samples/_failures_safe/1761280455_bd7103_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e996305.c: In function ‘main’:
./samples/SAFE/__tmp_0e996305.c:164:5: error: expected declaration or statement at end of input
  164 |     };
      |     ^
